Allow RMI test to run on Java 16